--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "slugify": "^1.6.6",
     "zod": "^3.25.28"
   },
   "devDependencies": {
