--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "slugify": "^1.6.6",
-    "zod": "^3.25.28"
+    "zod": "^3.25.28",
+    "zod-validation-error": "^3.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.15.21",
